--- a/app/src/main/res/layout/activity_mood_prompt.xml
+++ b/app/src/main/res/layout/activity_mood_prompt.xml
@@ -49,7 +49,7 @@
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginRight="4dp"
-               android:src="@drawable/ic_launcher_foreground"
+               android:src="@drawable/ic_date_range"
                />
 
            <TextView
@@ -66,7 +66,7 @@
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginLeft="7dp"
-               android:src="@drawable/ic_launcher_foreground"
+               android:src="@drawable/ic_schedule"
                />
            <TextView
                android:id="@+id/timeText"
@@ -84,51 +84,65 @@
             android:layout_marginVertical="20dp"
             android:layout_gravity="center_horizontal"
             android:gravity="center_vertical"
-            android:paddingLeft="17dp"
+            android:paddingLeft="20dp"
             android:orientation="horizontal"
             >
 
             <ImageButton
                 android:id="@+id/happyMood"
-                android:layout_width="63dp"
-                android:layout_height="63dp"
+                android:layout_width="52dp"
+                android:layout_height="45dp"
                 android:layout_marginRight="5dp"
-                android:src="@drawable/ic_launcher_foreground"
-                />
-
-            <ImageButton
-                android:id="@+id/sadMood"
-                android:layout_toLeftOf="@id/happyMood"
-                android:layout_width="63dp"
-                android:layout_height="63dp"
-                android:src="@drawable/ic_launcher_foreground"
-                android:layout_marginRight="5dp"
-
-                />
-
-            <ImageButton
-                android:id="@+id/mehMood"
-                android:layout_width="63dp"
-                android:layout_height="63dp"
-                android:src="@drawable/ic_launcher_foreground"
-                android:layout_marginRight="5dp"
-                />
-
-            <ImageButton
-                android:id="@+id/angryMood"
-                android:layout_width="63dp"
-                android:layout_height="63dp"
-                android:src="@drawable/ic_launcher_foreground"
-                android:layout_marginRight="5dp"
-
+                android:src="@drawable/ic_emoticon_happy"
+                android:background="@android:color/transparent"
                 />
 
             <ImageButton
                 android:id="@+id/whateverMood"
-                android:layout_width="63dp"
-                android:layout_height="63dp"
-                android:src="@drawable/ic_launcher_foreground"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/ic_emoticon_neutral"
+                android:background="@android:color/transparent"
                 />
+
+            <ImageButton
+                android:background="@android:color/transparent"
+                android:id="@+id/sadMood"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@id/happyMood"
+                android:src="@drawable/ic_emoticon_sad"
+                />
+
+            <ImageButton
+                android:id="@+id/mehMood"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/ic_emoticon_confused"
+                android:layout_marginRight="5dp"
+                android:background="@android:color/transparent"
+                />
+
+            <ImageButton
+                android:id="@+id/disappointedMood"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:src="@drawable/ic_emoticon_angry"
+                android:layout_marginRight="5dp"
+                android:background="@android:color/transparent"
+                />
+
+            <ImageButton
+                android:id="@+id/excitedMood"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginRight="5dp"
+                android:layout_toLeftOf="@id/disappointedMood"
+                android:src="@drawable/ic_emoticon_excited"
+                android:background="@android:color/transparent"
+                />
+
 
         </LinearLayout>
 
