--- a/app/src/main/res/menu/my_moods_menu.xml
+++ b/app/src/main/res/menu/my_moods_menu.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/myMoodsIcon"
+        android:checkable="true"
+        android:enabled="true"
+        android:icon="@drawable/ic_account_circle"
+        android:title="Item"
+        android:visible="true"
+        app:showAsAction="always" />
 </menu>
