mood show card and Recycler View first stage

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,9 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeActivity"
-    tools:showIn="@layout/mood_report_card"
-    >
+    tools:context=".HomeActivity">
+<!--    tools:showIn="@layout/mood_show_card"-->
+
 
 
     <androidx.recyclerview.widget.RecyclerView
