--- a/app/src/main/res/layout/mood_report_card.xml
+++ b/app/src/main/res/layout/mood_report_card.xml
@@ -1,20 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="250dp"
+
+        android:layout_width="399dp"
+        android:layout_height="260dp"
         android:layout_margin="5dp"
+        card_view:cardBackgroundColor="#E6E6FA"
+        card_view:cardCornerRadius="9dp"
+        card_view:cardElevation="6dp"
+        card_view:cardMaxElevation="9dp"
+        card_view:contentPadding="25dp"
+
         >
+
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:orientation="horizontal"
-            >
+            android:layout_height="230dp"
+            android:orientation="horizontal">
 
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/animEmogi"
@@ -28,8 +36,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical"
-                android:layout_margin="4dp">
+                android:layout_margin="4dp"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/stuffTeamText"
@@ -44,22 +52,21 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:text="11 happy"
-                    android:textStyle="bold"
-                    android:textSize="20dp"
                     android:textColor="@color/colorAccent"
-                    />
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="50dp"
-                    android:text="1 not happy"
+                    android:text="2 unhappy"
                     android:textColor="@color/colorAccent"
                     android:textSize="20dp"
                     android:textStyle="bold" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
@@ -67,18 +74,40 @@
                         android:layout_height="27dp"
                         android:text="Total:"
                         android:textColor="@color/colorAccent"
-                        android:textSize="20dp"
-                         />
+                        android:textSize="20dp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="27dp"
-                        android:text="10 members"
+                        android:text="12 members"
                         android:textColor="@color/colorAccent"
-                        android:textSize="20dp"
-                      />
+                        android:textSize="20dp" />
 
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/dateIcon"
+                        android:layout_width="35dp"
+                        android:layout_height="35dp"
+                        android:layout_marginRight="4dp"
+                        android:src="@drawable/ic_date_range"
+                        />
+
+                    <TextView
+                        android:id="@+id/dateText"
+                        android:layout_marginRight="7dp"
+                        android:layout_width="100dp"
+                        android:layout_height="45dp"
+                        android:text="mood date"
+                        android:textColor="@color/colorAccent"
+                        />
+
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
 
