--- a/app/src/main/res/layout/mood_show_card.xml
+++ b/app/src/main/res/layout/mood_show_card.xml
@@ -4,25 +4,34 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="#ffffff">
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentTop="false"
+    android:background="#ffffff"
+    android:clipToPadding="true"
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:id="@+id/relativeLayout"
-        android:layout_width="wrap_content"
+        android:id="@+id/relativeLayoutMoodsReport"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginBottom="8dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginLeft="18dp"
         android:background="@drawable/card_bg"
+        android:clipToPadding="false"
+        android:fadeScrollbars="false"
         android:paddingLeft="3dp"
-        android:paddingRight="40dp"
+        android:paddingRight="10dp"
         android:paddingBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="@id/imageView"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.28"
-        app:layout_constraintStart_toStartOf="@id/imageView"
-        app:layout_constraintTop_toTopOf="@id/imageView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/emoji"
+        app:layout_constraintTop_toTopOf="@id/emoji"
         app:layout_constraintVertical_bias="0.0">
+
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -31,68 +40,85 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="56dp"
-            android:layout_marginLeft="56dp"
+            android:layout_marginLeft="36dp"
             android:layout_marginTop="21dp"
-            android:layout_marginRight="33dp"
             android:layout_marginBottom="8dp"
             android:gravity="start"
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/stuffTeamText"
+                android:id="@+id/staffTeamText"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
+                android:layout_marginLeft="16dp"
                 android:text="Stuff Group"
                 android:textColor="@color/colorPrimary"
-                android:textSize="30dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:text="11 happy"
-                android:textColor="@color/colorAccent"
-                android:textSize="20dp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="38dp"
-                android:text="2 unhappy"
-                android:textColor="@color/colorAccent"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+                android:textSize="21dp"
+                android:textStyle="normal" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/inMoodText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:layout_marginRight="10dp"
+                    android:text="11 "
+                    android:textColor="@color/colorAccent"
+                    android:textSize="21dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/moodType"
+                    android:layout_width="wrap_content"
+                    android:layout_height="27dp"
+                    android:layout_marginLeft="18dp"
+                    android:text=" Happy "
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18dp" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="27dp"
-                    android:text="Total:"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20dp" />
+                    android:text="Members: "
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18dp" />
 
                 <TextView
+                    android:id="@+id/totalMembers"
                     android:layout_width="wrap_content"
-                    android:layout_height="27dp"
-                    android:text="12 members"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="20dp" />
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="12 "
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="21dp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="16dp"
                 android:orientation="horizontal">
 
                 <ImageView
                     android:id="@+id/dateIcon"
                     android:layout_width="wrap_content"
-                    android:layout_height="35dp"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_marginRight="4dp"
                     android:src="@drawable/ic_date_range" />
 
@@ -100,10 +126,12 @@
                     android:id="@+id/dateText"
                     android:layout_width="wrap_content"
                     android:layout_height="35dp"
+                    android:layout_marginLeft="16dp"
                     android:layout_marginRight="7dp"
                     android:gravity="center_vertical"
                     android:text="mood date"
-                    android:textColor="@color/colorAccent" />
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18dp" />
 
             </LinearLayout>
 
@@ -112,18 +140,19 @@
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:id="@+id/emoji"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="477dp"
         android:layout_marginRight="477dp"
-        android:contentDescription="TODO"
+        android:contentDescription="Emoji"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_emoticon_excited" />
+        app:srcCompat="@drawable/ic_emoticon_excited"
+        tools:ignore="VectorDrawableCompat" />
 </androidx.constraintlayout.widget.ConstraintLayout>
