--- a/app/src/main/res/menu/my_moods_menu.xml
+++ b/app/src/main/res/menu/my_moods_menu.xml
@@ -3,10 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/myMoodsIcon"
+        android:id="@+id/my_mood_history"
         android:checkable="true"
         android:enabled="true"
-        android:icon="@drawable/ic_history"
+        android:icon="@drawable/ic_mood_history"
         android:title="Item"
         android:visible="true"
         app:showAsAction="always" />
